手机端和pc端分割线区分等样式优化

--- a/index.html
+++ b/index.html
@@ -66,19 +66,21 @@
 
    <!-- 手机端第一屏banner开始 -->
    <div class="mobile-banner-wrap">
-    <div class="mobile-banner-title">游戏云电脑，登录即玩！</i></div>
-    <div class="common-line2">
-      <span class="common-line2-price">低至0.2元</span>
-      <span class="common-line2-game">/千款游戏/开机即玩/顺畅不卡顿</span>
-    </div>
-    <div class="banner-line3">
-      <div class="banner-pc-download">
-        <div class="download-windows">Windows版下载</div>
-        <div class="download-mac">苹果mac版下载</div>
+    <div class="mobile-banner-content">
+      <div class="mobile-banner-title">游戏云电脑，登录即玩！</i></div>
+      <div class="common-line2">
+        <span class="common-line2-price">低至0.2元</span>
+        <span class="common-line2-game">/千款游戏/开机即玩/顺畅不卡顿</span>
       </div>
-      <div class="banner-mobile-download">
-        <img src="./images/android-download.png"/>
-        <div>移动端</div>
+      <div class="banner-line3">
+        <div class="banner-pc-download">
+          <div class="download-windows">Windows版下载</div>
+          <div class="download-mac">苹果mac版下载</div>
+        </div>
+        <div class="banner-mobile-download">
+          <img src="./images/android-download.png"/>
+          <div>移动端</div>
+        </div>
       </div>
     </div>
    </div>
@@ -87,7 +89,9 @@
    <!-- pc中间分隔开始 -->
   <div class="module-divider-common1">
     <span class="divider-content1">
-      <img src="./images/divier-left.png"/><span class="divider-content-text">1000+热门游戏，登录即玩</span><img src="./images/divider-right.png"/>
+      <img src="./images/divier-left.png"/>
+      <span class="divider-content-text">1000+热门游戏，登录即玩</span>
+      <img src="./images/divider-right.png"/>
     </span>
   </div> 
   <!-- pc中间分隔结束 -->
@@ -95,7 +99,7 @@
    <!-- 手机端中间分隔开始 -->
   <div class="mobile-module-divider-common mobile-module-divider-common-download">
     <span class="mobile-divider-content1">
-      <img  src="./images/divier-left-mobile.png" class="divider-left-img-mobile"/>
+      <img src="./images/divier-left-mobile.png" class="divider-left-img-mobile"/>
       下载客户端，查看更多游戏
       <img src="./images/divider-right-mobile.png" class="divider-right-img-mobile"/>
     </span>
@@ -133,7 +137,6 @@
   <!-- 手机端查看更多游戏结束 -->
  
   <!-- 分隔开始 -->
-
   <div class="module-divider-common2 mobile-module-divider-common">
     <span class="divider-content2">
       <img  src="./images/divier-left.png" class="divider-left-img"/>
@@ -404,7 +407,7 @@
           <div class="more-game-window-download"><i class="iconfont icon-Vector1"></i>Windows版下载</div>
         </div>
         <div class="more-game-mobile-download">
-          <img />
+          <img src="./images/android-download.png"/>
           <div><i class="iconfont icon-Frame61"></i>移动端</div>
         </div>
        </div>
