--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
         </div>
         <div class="banner-line3">
           <div class="banner-pc-download">
-            <div class="download-windows"><i class="iconfont icon-Vector1"></i>Windows版下载</div>
+            <a href=""><div class="download-windows"><i class="iconfont icon-Vector1"></i>Windows版下载</div></a>
             <div class="download-mac"><i class="iconfont icon-Frame41"></i>苹果mac版下载</div>
           </div>
           <div class="banner-mobile-download">
-            <img src="./images/android-download.png"/>
+            <!-- <img src="./images/android-download.png"/> -->
+            <div id="app-download-qrcode-pc"></div>
             <div><i class="iconfont icon-Frame61"></i>移动端</div>
           </div>
         </div>
@@ -78,7 +79,8 @@
           <div class="download-mac">苹果mac版下载</div>
         </div>
         <div class="banner-mobile-download">
-          <img src="./images/android-download.png"/>
+          <!-- <img src="./images/android-download.png"/> -->
+          <div id="app-download-qrcode-mobile"></div>
           <div>移动端</div>
         </div>
       </div>
@@ -270,7 +272,7 @@
         </div>
       </div>
 
-      <div class="footer-item">
+      <div class="footer-item footer-item-link">
         <div class="footer-item-title">友情链接</div>
         <div class="footer-item-line"><a href="https://www.shunwang.com/?from=icloudpc" target="_blank">
           <img src="./images/shunwang.png"/>
@@ -404,11 +406,12 @@
         <span class="more-game-download-close" onclick="closePopup()"><i class="iconfont icon-a-Maskgroup"></i></span>
         <div class="more-game-download-title">下载客户端，即可搜索更多游戏！！</div>
         <div class="more-game-pc-download">
-          <div class="more-game-mac-download"><i class="iconfont icon-Frame41"></i>苹果MAC版下载</div>
+          <a><div class="more-game-mac-download"><i class="iconfont icon-Frame41"></i>苹果MAC版下载</div></a>
           <div class="more-game-window-download"><i class="iconfont icon-Vector1"></i>Windows版下载</div>
         </div>
         <div class="more-game-mobile-download">
-          <img src="./images/android-download.png"/>
+          <!-- <img src="./images/android-download.png"/> -->
+          <div id="app-download-qrcode-more"></div>
           <div><i class="iconfont icon-Frame61"></i>移动端</div>
         </div>
        </div>
