--- a/price.html
+++ b/price.html
@@ -62,8 +62,8 @@
           <!-- 周期卡 -->
           <div class="swiper-slide">
             <div class="price-item">
-              <span class="price-hour">1.2元/时</span>
-              <div class="price-title price-text">月卡.每日两小时</div>
+              <span class="price-hour">1.21元/时</span>
+              <div class="price-title price-text" title="月卡.每日两小时月卡.每日两小时">月卡.每日两小时月卡.每日两小时</div>
               <img src="./images/crown2.png"/>
               <div class="price-line"><span class="money-count">¥72</span>/月</div>
               <div class="origin-price">90元/月</div>
@@ -170,8 +170,8 @@
           <!-- 周期卡 -->
           <div class="swiper-slide">
             <div class="mobile-price-item">
-              <span class="mobile-price-hour">1.2元/时</span>
-              <div class="mobile-price-title mobile-price-text">月卡.每日两小时</div>
+              <span class="mobile-price-hour">1.21元/时</span>
+              <div class="mobile-price-title mobile-price-text" title="月卡.每日两小时月卡.每日两小时">月卡.每日两小时月卡.每日两小时</div>
               <img src="./images/crown2-mobile.png"/>
               <div class="mobile-price-line">
                 <span class="mobile-money-count">¥72</span>/月
@@ -481,7 +481,7 @@
       <div class="online-mobile-content">
         <div class="online-mobile-info">请输入您的手机号码，系统将关联您登记过的信息，以便我们高校的为您服务</div>
         <div class="online-mobile-info-input"><input placeholder="请输入手机号" type="text" id="mobileInput"/></div>
-        <div class="online-mobile-error" id="mobileError">手机号码格式错误</div>
+        <div class="error-tip" id="mobileError">手机号码格式错误</div>
         <div class="online-button" onclick="handleConsult()">立即咨询</div>
       </div>
     </div>
