不同卡图片皇冠不同；首页加个卡片增加加个标题

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
     <div class="price-preview-content">
       
       <div class="price-preview-item">
+        <span class="price-hour">1.21元/时</span>
         <span class="price-kind">月卡</span>
         <div class="price-img">
           <img src="./images/crown1.png"/>
@@ -165,6 +166,7 @@
       </div>
       
       <div class="price-preview-item">
+        <span class="price-hour">1.21元/时</span>
         <span class="price-kind">季卡</span>
         <div class="price-img">
           <img src="./images/crown2.png"/>
@@ -175,9 +177,10 @@
       </div>
 
       <div class="price-preview-item">
+        <span class="price-hour">1.21元/时</span>
         <span class="price-kind">年卡</span>
         <div class="price-img">
-          <img src="./images/crown2.png"/>
+          <img src="./images/crown3.png"/>
         </div>
         <div class="price-kind">每日两小时</div>
         <div class="price-count">¥579</div>
@@ -185,9 +188,10 @@
       </div>
 
       <div class="price-preview-item">
+        <span class="price-hour">1.21元/时</span>
         <span class="price-kind">日卡</span>
         <div class="price-img">
-          <img src="./images/crown2.png"/>
+          <img src="./images/crown4.png"/>
         </div>
         <div class="price-kind">无限时长</div>
         <div class="price-count">¥750</div>
