最低价格样式调整

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
        <div class="banner-left">
         <div class="common-left-title">游戏云电脑，登录即玩！</div>
         <div class="common-line2">
-          <span class="common-line2-price">低至0.2元</span>
+          <span class="common-line2-price">低至0.44元/时</span>
           <span class="common-line2-game">/千款游戏/开机即玩/顺畅不卡顿</span>
         </div>
         <div class="banner-line3">
@@ -71,7 +71,7 @@
     <div class="mobile-banner-content">
       <div class="mobile-banner-title">游戏云电脑，登录即玩！</i></div>
       <div class="common-line2">
-        <span class="common-line2-price">低至0.2元</span>
+        <span class="common-line2-price">低至0.44元/时</span>
         <span class="common-line2-game">/千款游戏/开机即玩/顺畅不卡顿</span>
       </div>
       <div class="banner-line3">
@@ -115,7 +115,7 @@
       <div class="more-game-left">
         <div class="common-left-title">搜索查看更多游戏</div>
         <div class="common-line2">
-          <span class="common-line2-price">低至0.2元</span>
+          <span class="common-line2-price">低至0.44元/时</span>
           <span class="common-line2-game">/千款游戏/开机即玩/顺畅不卡顿</span>
         </div>
         <div class="see-more-game-btn" onclick="handleSeeMoreGame()">查看更多游戏</div>
