--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
           <span class="common-line2-price">低至0.44元/时</span>
           <span class="common-line2-game">/千款游戏/开机即玩/顺畅不卡顿</span>
         </div>
+        <div class="line-pc-i7-wrap">
+          <img src="./images/i7-pc-logo.png"/>
+        </div>
         <div class="banner-line3">
           <div class="banner-pc-download">
             <a href=""><div class="download-windows"><i class="iconfont icon-Vector1"></i>Windows版下载</div></a>
@@ -58,7 +61,7 @@
             <div><i class="iconfont icon-Frame61"></i>移动端</div>
           </div>
         </div>
-        <div class="download-new" onclick="goPlayNow()">立即游玩（网页版）</div>
+        <!-- <div class="download-new" onclick="goPlayNow()">立即游玩（网页版）</div> -->
        </div>
         <div class="banner-right">
       </div>
@@ -85,7 +88,7 @@
           <div>移动端</div>
         </div>
       </div>
-      <div class="banner-mobile-new" onclick="goPlayNow()">立即游玩（网页版）</div>
+      <!-- <div class="banner-mobile-new" onclick="goPlayNow()">立即游玩（网页版）</div> -->
     </div>
    </div>
    <!-- 手机端第一屏banner结束 -->
