手机端改动适配完成

--- a/index.html
+++ b/index.html
@@ -124,7 +124,10 @@
         <span class="common-line2-price">低至0.44元/时</span>
         <span class="common-line2-game">/千款游戏/开机即玩/顺畅不卡顿</span>
       </div>
-
+      <div class="mobile-banner-download">
+        <i class="iconfont icon-Frame61"></i>
+        Android版下载
+      </div>
     </div>
    </div>
    <!-- 手机端第一屏banner结束 -->
@@ -388,14 +391,14 @@
     <div class="mobile-footer-item">
       <div class="mobile-footer-title-text">客户端下载</div>
       <div>
-        <span class="client-download"><a herf="" class="mobile-footer-con-text mobile-window">Windows版下载</a></span>
+        <span class="client-download"><a href="" class="mobile-footer-con-text mobile-window">3.0抢先版下载</a></span>
         <span class="client-download"><a class="mobile-footer-con-text" href="">Android版下载</a></span>
       </div>
       <div>
-        <span class="client-download"><a herf="" class="mobile-footer-con-text mobile-window">Windows版下载</a></span>
-        <span class="client-download"><a class="mobile-footer-con-text" href="">Android版下载</a></span>
+        <span class="client-download"><a href="" class="mobile-footer-con-text">苹果mac版下载</a></span>
+        <span class="client-download"><a class="mobile-footer-con-text" href="">Windows版下载</a></span>
       </div>
-      <div><a href="" class="mobile-footer-con-text">苹果mac版下载</a></div>
+      <div><a href="" class="mobile-footer-con-text">网页版（立即游玩）</a></div>
     </div>
 
     <div class="mobile-footer-item">
